--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "eslint-plugin-jest": "^27.1.4",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.0",
+    "fork-ts-checker-webpack-plugin": "^7.2.13",
     "fs-extra": "^10.0.1",
     "husky": "^8.0.2",
     "jest": "^29.3.0",
