--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "lib": [
+      "ES2022",
+    ],
     "outDir": "dist",
+    "types": ["kill-port", "better-opn", "preprocess", "ima__server", "less-plugin-glob"]
   },
   "include": [
     "src"
