--- a/packages/error-overlay/tsconfig.json
+++ b/packages/error-overlay/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "lib": [
+      "ES2022",
       "DOM",
+      "DOM.Iterable",
     ],
     "outDir": "dist",
     "declaration": false,
@@ -11,7 +13,8 @@
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "types": ["hmr-client"]
   },
   "include": [
     "src"
