--- a/packages/hmr-client/tsconfig.json
+++ b/packages/hmr-client/tsconfig.json
@@ -2,16 +2,19 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "lib": [
+      "ES2022",
       "DOM",
+      "DOM.Iterable",
     ],
     "outDir": "dist",
-    "declaration": false,
+    "declaration": true,
     "baseUrl": ".",
     "paths": {
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "types": ["webpack", "webpack-env"]
   },
   "include": [
     "src"
