--- a/packages/plugin-cli/tsconfig.json
+++ b/packages/plugin-cli/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "lib": [
+      "ES2022",
+    ],
     "outDir": "dist",
+    "types": ["preprocess"]
   },
   "include": [
     "src"
