--- a/packages/create-ima-app/template/package.json
+++ b/packages/create-ima-app/template/package.json
@@ -43,6 +43,7 @@
     "express-http-proxy": "^1.6.3",
     "express-static-gzip": "^2.1.7",
     "helmet": "^3.23.3",
+    "http-proxy-middleware": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
