--- a/packages/hmr-client/tsconfig.json
+++ b/packages/hmr-client/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "target": "ES2018",
+    "module": "ES2015",
     "lib": [
       "ES2022",
       "DOM",
@@ -8,12 +10,6 @@
     ],
     "outDir": "dist",
     "declaration": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-    },
     "types": ["webpack", "webpack-env"]
   },
   "include": [
