--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -47,6 +47,7 @@
     "css-minimizer-webpack-plugin": "^4.0.0",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
+    "express-http-proxy": "^1.6.3",
     "express-static-gzip": "^2.1.7",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "globby": "11.1.0",
