--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@esmj/emitter": "^0.0.7",
     "ejs": "^3.1.6",
+    "http-proxy-middleware": "^2.0.6",
     "winston": "^3.8.2"
   },
   "devDependencies": {
