--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -27,6 +27,7 @@
     "@esmj/emitter": "^0.0.7",
     "ejs": "^3.1.6",
     "http-proxy-middleware": "^2.0.6",
+    "memoize-one": "^6.0.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
