--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@esmj/emitter": "^0.0.7",
+    "@esmj/monitor": "^0.2.0",
     "ejs": "^3.1.6",
     "http-proxy-middleware": "^2.0.6",
     "memoize-one": "^6.0.0",
