--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -43,7 +43,7 @@
     "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.24.1",
-    "css-loader": "6.7.1",
+    "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
@@ -68,7 +68,7 @@
     "schema-utils": "4.0.0",
     "swc-loader": "^0.2.1",
     "webpack": "^5.75.0",
-    "webpack-dev-middleware": "^5.3.3",
+    "webpack-dev-middleware": "^6.0.1",
     "webpack-hot-middleware": "^2.25.3",
     "yargs": "^17.5.1"
   },
