--- a/packages/create-ima-app/template/package.json
+++ b/packages/create-ima-app/template/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-react": "^7.16.7",
-    "@ima/cli": "latest",
+    "@ima/cli": "^18.0.0",
     "@swc/jest": "^0.2.20",
     "@cfaester/enzyme-adapter-react-18": "^0.6.0",
     "enzyme": "^3.11.0",
@@ -33,9 +33,9 @@
     "prettier": "^2.6.0"
   },
   "dependencies": {
-    "@ima/core": "rc",
-    "@ima/react-page-renderer": "latest",
-    "@ima/server": "rc",
+    "@ima/core": "^18.0.0",
+    "@ima/react-page-renderer": "^18.0.0",
+    "@ima/server": "^18.0.0",
     "body-parser": "^1.19.2",
     "compression": "1.7.4",
     "cookie-parser": "^1.4.6",
