--- a/packages/plugin-cli/package.json
+++ b/packages/plugin-cli/package.json
@@ -45,7 +45,7 @@
     "@types/yargs": "^17.0.10"
   },
   "peerDependencies": {
-    "typescript": "*"
+    "typescript": ">=4"
   },
   "peerDependenciesMeta": {
     "typescript": {
