--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -49,12 +49,12 @@
     "preversion": "npm test"
   },
   "dependencies": {
-    "@ima/helpers": "^18.0.0-rc.7",
+    "@ima/helpers": "^18.0.0",
     "classnames": "^2.3.1",
     "memoize-one": "^6.0.0"
   },
   "devDependencies": {
-    "@ima/plugin-cli": "^18.0.0-rc.7",
+    "@ima/plugin-cli": "^18.0.0",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.2",
     "@types/multer": "^1.4.7",
