--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -26,8 +26,8 @@
     "stylelint": "stylelint './**/*.less'"
   },
   "devDependencies": {
-    "@ima/dev-utils": "^18.0.0-rc.13",
-    "@ima/hmr-client": "^18.0.0-rc.13",
+    "@ima/dev-utils": "^18.0.0",
+    "@ima/hmr-client": "^18.0.0",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
