--- a/packages/react-page-renderer/package.json
+++ b/packages/react-page-renderer/package.json
@@ -36,7 +36,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "@ima/helpers": "^18.0.0-rc.5",
+    "@ima/helpers": "^18.0.0",
     "classnames": "^2.3.1",
     "memoize-one": "^6.0.0"
   },
@@ -50,7 +50,7 @@
     "to-mock": "^1.6.2"
   },
   "peerDependencies": {
-    "@ima/core": "^18.0.0-rc.28",
+    "@ima/core": ">=18.0.0",
     "react": ">=16",
     "react-dom": ">=16",
     "webpack": "^5.70.0"
