--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -35,8 +35,8 @@
     "express": "^4.17.3"
   },
   "peerDependencies": {
-    "@ima/dev-utils": "18.0.0",
-    "@ima/helpers": "18.0.0"
+    "@ima/dev-utils": ">=18.0.0",
+    "@ima/helpers": ">=18.0.0"
   },
   "publishConfig": {
     "access": "public",
