--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ jobs:
       - npm run test:all
       - npm run test:size
       - npm run benchmark
+      - npm run ima-app:test
       # - npm audit || echo \"audit found some vulnerabilities.\"
       # Build doc only in next and master to improve CI times
       - |
