--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ jobs:
       - npm run test:all
       - npm run test:size
       - npm run benchmark
+      - npm run ima-app:test
       # - npm audit || echo \"audit found some vulnerabilities.\"
     - if: branch =~ /^(master|next)$/
       stage: "deploy"
