--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "build": "npm run build --workspaces --if-present",
     "commit": "echo 'This command has been replaced with \"npm run changeset\"'",
     "changeset": "changeset add",
-    "ima-app:test": "utils/imaApp/test.sh",
+    "ima-app:test:all": "utils/imaApp/tests.sh",
     "postinstall": "npm run build",
     "lint": "eslint --cache --cache-location=node_modules/.cache/ './**/*.{js,jsx,ts,tsx,mjs}'",
     "prepare": "husky install",
