--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jobs:
       - npm run stylelint
       - npm run test:all
       - npm run test:size
-      - npm run benchmark
+      - npm run test:create-ima-app
       # - npm audit || echo \"audit found some vulnerabilities.\"
     - if: branch =~ /^(master|next)$/
       stage: "deploy"
