--- a/packages/react-page-renderer/package.json
+++ b/packages/react-page-renderer/package.json
@@ -17,9 +17,24 @@
   "license": "MIT",
   "author": "Matěj Marčišovský <matej.marcisovsky@firma.seznam.cz>",
   "typedocMain": "./src/index.ts",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/server/index.js",
-  "browser": "./dist/esm/client/index.js",
+  "exports": {
+    ".": {
+      "node": {
+        "import": "./dist/esm/server/index.js",
+        "require": "./dist/cjs/index.js"
+      },
+      "default": "./dist/esm/client/index.js"
+    },
+    "./renderer/*": {
+      "node": {
+        "import": "./dist/esm/server/renderer/*.js",
+        "require": "./dist/cjs/renderer/*.js"
+      },
+      "default": "./dist/esm/client/renderer/*.js"
+    },
+    "./hook/*": "./dist/hook/*.js",
+    "./*": "./*.js"
+  },
   "types": "./dist/esm/client/index.js",
   "scripts": {
     "dev": "node ../plugin-cli/dist/bin/ima-plugin.js dev",
