--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "./website"
   ],
   "scripts": {
-    "benchmark": "utils/benchmark/benchmark.sh",
     "dev": "node ./utils/scripts/dev.js",
     "build": "npm run build --workspaces --if-present",
     "commit": "echo 'This command has been replaced with \"npm run changeset\"'",
@@ -43,6 +42,7 @@
     "stylelint": "stylelint --cache --cache-location=node_modules/.cache/ './**/*.{css,less}'",
     "test": "jest --changedSince `test -f '.changeset/pre.json' && echo 'next' || echo 'master'`",
     "test:all": "jest --colors",
+    "test:create-ima-app": "utils/tests/testRunner.sh",
     "test:size": "npm run test:size --workspaces --if-present",
     "version": "npm run doc && node utils/version/create-ima-app-versions.js && git add docs packages/create-ima-app/template/package.json"
   },
