--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "lint": "eslint --cache --cache-location=node_modules/.cache/ './**/*.{js,jsx,ts,tsx,mjs}'",
     "prepare": "husky install",
     "release": "npm run release:prepare && npm run release:push",
-    "release:prepare": "changeset version",
-    "release:push": "git add . && git commit -m 'Publish' && changeset tag && git push --follow-tags",
+    "release:prepare": "git stash -u && changeset version",
+    "release:push": "git add . && git commit -m 'Publish' && git stash pop && changeset tag && git push --follow-tags",
     "release:devtools": "npm run publish-webstore --prefix ./packages/devtools",
     "release:graduate": "changeset pre exit && npm run release",
     "release:next:init": "changeset pre enter rc",
