feat: add timeout middleware; drop body-parser middleware

--- a/packages/create-ima-app/template/package.json
+++ b/packages/create-ima-app/template/package.json
@@ -37,8 +37,8 @@
     "@ima/core": "^18.0.0",
     "@ima/react-page-renderer": "^18.0.0",
     "@ima/server": "^18.0.0",
-    "body-parser": "^1.19.2",
     "compression": "1.7.4",
+    "connect-timeout": "1.9.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
     "express-http-proxy": "^1.6.3",
