--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ima/cli",
-  "version": "18.2.0",
+  "version": "19.0.0-rc.0",
   "description": "IMA.js CLI tool to build, develop and work with IMA.js applications.",
   "keywords": [
     "IMA",
@@ -30,9 +30,9 @@
     "lint": "eslint './**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
-    "@ima/dev-utils": "^18.0.0",
-    "@ima/error-overlay": "^18.0.0",
-    "@ima/hmr-client": "^18.0.0",
+    "@ima/dev-utils": "^19.0.0-rc.0",
+    "@ima/error-overlay": "^19.0.0-rc.0",
+    "@ima/hmr-client": "^19.0.0-rc.0",
     "@messageformat/core": "^3.0.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.9",
     "@swc/core": "^1.3.16",
@@ -82,7 +82,7 @@
     "@types/yargs": "^17.0.10"
   },
   "peerDependencies": {
-    "@ima/server": ">=18.0.0"
+    "@ima/server": ">=19.0.0-rc.0"
   },
   "publishConfig": {
     "access": "public",
