--- a/packages/create-ima-app/package.json
+++ b/packages/create-ima-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-ima-app",
-  "version": "18.3.0",
+  "version": "19.0.0-rc.0",
   "description": "Create a IMA.js App easily.",
   "type": "module",
   "keywords": [
