--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ima/error-overlay",
-  "version": "18.0.0",
+  "version": "19.0.0-rc.0",
   "description": "IMA.js error-overlay used in development mode for error reporting.",
   "keywords": [
     "IMA.js",
@@ -26,8 +26,8 @@
     "stylelint": "stylelint './**/*.less'"
   },
   "devDependencies": {
-    "@ima/dev-utils": "^18.0.0",
-    "@ima/hmr-client": "^18.0.0",
+    "@ima/dev-utils": "^19.0.0-rc.0",
+    "@ima/hmr-client": "^19.0.0-rc.0",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
