--- a/packages/hmr-client/package.json
+++ b/packages/hmr-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ima/hmr-client",
-  "version": "18.0.2",
+  "version": "19.0.0-rc.0",
   "description": "IMA.js hmr client used to connect app with error overlay.",
   "keywords": [
     "IMA.js",
