--- a/packages/react-page-renderer/package.json
+++ b/packages/react-page-renderer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ima/react-page-renderer",
-  "version": "18.1.6",
+  "version": "19.0.0-rc.0",
   "description": "IMA.js React page renderer.",
   "keywords": [
     "IMA.js",
@@ -65,7 +65,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "@ima/helpers": "^18.0.0",
+    "@ima/helpers": "^19.0.0-rc.0",
     "classnames": "^2.3.1",
     "memoize-one": "^6.0.0"
   },
@@ -79,7 +79,7 @@
     "to-mock": "^1.6.2"
   },
   "peerDependencies": {
-    "@ima/core": ">=18.0.0",
+    "@ima/core": ">=19.0.0-rc.0",
     "react": ">=16",
     "react-dom": ">=16",
     "webpack": "^5.70.0"
