--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ima/server",
-  "version": "18.2.0",
+  "version": "19.0.0-rc.0",
   "description": "Default dev server for IMA.js applications.",
   "keywords": [
     "IMA.js",
@@ -35,8 +35,8 @@
     "express": "^4.17.3"
   },
   "peerDependencies": {
-    "@ima/dev-utils": ">=18.0.0",
-    "@ima/helpers": ">=18.0.0"
+    "@ima/dev-utils": ">=19.0.0-rc.0",
+    "@ima/helpers": ">=19.0.0-rc.0"
   },
   "publishConfig": {
     "access": "public",
