--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -35,6 +35,7 @@
     "express": "^4.17.3"
   },
   "peerDependencies": {
+    "@ima/core": ">=19.0.0-rc.0",
     "@ima/dev-utils": ">=19.0.0-rc.0",
     "@ima/helpers": ">=19.0.0-rc.0"
   },
