--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,6 +34,8 @@
     }
   ],
   "typedocMain": "./src/index.ts",
+  "main": "./dist/cjs/index.js",
+  "types": "./dist/esm/client/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/esm/client/index.d.ts",
