--- a/packages/react-page-renderer/package.json
+++ b/packages/react-page-renderer/package.json
@@ -17,6 +17,8 @@
   "license": "MIT",
   "author": "Matěj Marčišovský <matej.marcisovsky@firma.seznam.cz>",
   "typedocMain": "./src/index.ts",
+  "main": "./dist/cjs/index.js",
+  "types": "./dist/esm/client/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/esm/client/index.d.ts",
