--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "postcss-less": "6.0.0",
     "postcss-loader": "^7.0.0",
     "postcss-preset-env": "^8.0.1",
-    "prettier": "^2.6.0",
+    "prettier": "^2.8.4",
     "react": ">=17.0.2",
     "react-dom": ">=17.0.2",
     "rollup": "^3.2.5",
@@ -108,6 +108,7 @@
     "stylelint-config-standard": "^30.0.1",
     "stylelint-declaration-block-no-ignored-properties": "^2.6.0",
     "stylelint-order": "^6.0.2",
+    "stylelint-prettier": "^2.0.0",
     "to-mock": "1.6.2",
     "ts-jest": "^29.0.3",
     "typescript": "^4.7.2",
