--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -71,16 +71,16 @@
     "webpack": "^5.75.0",
     "webpack-dev-middleware": "^6.0.1",
     "webpack-hot-middleware": "^2.25.3",
-    "yargs": "^17.5.1"
+    "yargs": "^17.5.1",
+    "@types/yargs": "^17.0.10",
+    "@types/webpack-env": "^1.18.0",
+    "@types/webpack-hot-middleware": "2.25.6"
   },
   "devDependencies": {
     "@types/cli-progress": "^3.11.0",
     "@types/ejs": "^3.1.0",
     "@types/express": "^4.17.14",
-    "@types/nodemon": "^1.19.2",
-    "@types/webpack-env": "^1.18.0",
-    "@types/webpack-hot-middleware": "2.25.6",
-    "@types/yargs": "^17.0.10"
+    "@types/nodemon": "^1.19.2"
   },
   "peerDependencies": {
     "@ima/server": ">=19.0.0-rc.0"
