--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -63,6 +63,7 @@
   "dependencies": {
     "@ima/helpers": "^19.0.0-rc.1",
     "@types/node": "^18.13.0",
+    "@types/yargs": "^17.0.22",
     "classnames": "^2.3.1",
     "memoize-one": "^6.0.0"
   },
