--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -72,6 +72,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.2",
     "@types/multer": "^1.4.7",
+    "@types/webpack": "^5.28.0",
     "jscodeshift": "^0.14.0"
   },
   "publishConfig": {
