--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -65,12 +65,14 @@
     "@types/node": "^18.13.0",
     "@types/yargs": "^17.0.22",
     "classnames": "^2.3.1",
-    "memoize-one": "^6.0.0"
+    "memoize-one": "^6.0.0",
+    "merge-deep": "^3.0.3"
   },
   "devDependencies": {
     "@ima/plugin-cli": "^19.0.0-rc.2",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.2",
+    "@types/merge-deep": "^3.0.0",
     "@types/multer": "^1.4.7",
     "jscodeshift": "^0.14.0"
   },
