--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -65,8 +65,7 @@
     "@types/node": "^18.13.0",
     "@types/yargs": "^17.0.22",
     "classnames": "^2.3.1",
-    "memoize-one": "^6.0.0",
-    "merge-deep": "^3.0.3"
+    "memoize-one": "^6.0.0"
   },
   "devDependencies": {
     "@ima/plugin-cli": "^19.0.0-rc.2",
